Fixes no momentum scrolling on iOS
When desktop-view is open on iOS, e.g. an iPad in landscape, momentum scrolling is broken. Small tweaks to `overflow` settings fixes. Citation: https://css-tricks.com/snippets/css/momentum-scrolling-on-ios-overflow-elements/

--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -146,9 +146,12 @@ body {
   body {
     flex-direction: row;
     height: 100vh;
-    overflow: auto;
-    > * { max-height: 100vh; overflow: auto; }
-  }
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
+    > * { max-height: 100vh; 
+          overflow-y: scroll; 
+          -webkit-overflow-scrolling: touch;
+          }
 
   /* Undo mobile CSS */
 
